assets/queries/k8s/ingress_whitelist_open_to_all/test/positive_expected_result.json
[
  {
    "queryName": "Ingress Whitelist Open To All IPs",
    "severity": "HIGH",
    "line": 5
  },
  {
    "queryName": "Ingress Whitelist Open To All IPs",
    "severity": "HIGH",
    "line": 24
  },
  {
    "queryName": "Ingress Whitelist Open To All IPs",
    "severity": "HIGH",
    "line": 43
  }
]
